; ModuleID = '/home/carl/AnghaBench/micropython/lib/littlefs/extr_lfs2.c_lfs2_ctz_fromle32.c'
source_filename = "/home/carl/AnghaBench/micropython/lib/littlefs/extr_lfs2.c_lfs2_ctz_fromle32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lfs2_ctz = type { i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lfs2_ctz*)* @lfs2_ctz_fromle32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lfs2_ctz_fromle32(%struct.lfs2_ctz* %0) #0 {
  %2 = alloca %struct.lfs2_ctz*, align 8
  store %struct.lfs2_ctz* %0, %struct.lfs2_ctz** %2, align 8
  %3 = load %struct.lfs2_ctz*, %struct.lfs2_ctz** %2, align 8
  %4 = getelementptr inbounds %struct.lfs2_ctz, %struct.lfs2_ctz* %3, i32 0, i32 1
  %5 = load i8*, i8** %4, align 8
  %6 = call i8* @lfs2_fromle32(i8* %5)
  %7 = load %struct.lfs2_ctz*, %struct.lfs2_ctz** %2, align 8
  %8 = getelementptr inbounds %struct.lfs2_ctz, %struct.lfs2_ctz* %7, i32 0, i32 1
  store i8* %6, i8** %8, align 8
  %9 = load %struct.lfs2_ctz*, %struct.lfs2_ctz** %2, align 8
  %10 = getelementptr inbounds %struct.lfs2_ctz, %struct.lfs2_ctz* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  %12 = call i8* @lfs2_fromle32(i8* %11)
  %13 = load %struct.lfs2_ctz*, %struct.lfs2_ctz** %2, align 8
  %14 = getelementptr inbounds %struct.lfs2_ctz, %struct.lfs2_ctz* %13, i32 0, i32 0
  store i8* %12, i8** %14, align 8
  ret void
}

declare dso_local i8* @lfs2_fromle32(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
